appId: com.kuapa.app
---
- launchApp:
    clearState: true
- tapOn: "you@school.edu.gh"
- inputText: "customer@mail.com"
- tapOn: "Enter your password"
- inputText: "seller@123!"
- tapOn: "Back"
- tapOn: "Sign In"







